<resources>
    <string name="app_name">Sashakt</string>
    <string name="student_title">Student</string>
    <string name="teacher_title">Teacher</string>
    <string name="school">School</string>
    <string name="download_resource">Download Resource</string>
    <string name="class_school">Class</string>
    <string name="module">Module</string>
    <string name="password">Password</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="upload_resource">Upload Resource</string>
    <string name="helper_text">Enter your 6-digit pin</string>

    <string name="language_pref">Language Preference</string>
    <string name="lang_dialog_title">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="close">Close</string>
    <!-- Language select dialog -->
    <string-array name="lang_select">
        <item>English</item>
        <item>Hindi</item>
    </string-array>

</resources>
