<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/closeDialogImg"
        android:layout_width="@dimen/close_button"
        android:layout_height="@dimen/close_button"
        android:layout_margin="@dimen/close_button_margin"
        app:srcCompat="@drawable/ic_close"
        android:contentDescription="@string/close" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_height"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/box_corner_radius">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:text="@string/lang_dialog_title"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/dialog_textsize" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="@dimen/margin_title_top"
            android:entries="@array/lang_select"
            android:padding="@dimen/spinner_padding"
            android:prompt="@string/language_pref" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_title_top"
            android:layout_marginEnd="@dimen/margin_title_top"
            android:layout_toStartOf="@id/change"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cancel"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/change" />

    </RelativeLayout>
</RelativeLayout>
</layout>