<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/padding_form"
            android:paddingEnd="@dimen/padding_form">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/school_teacher"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/school"
                    app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                    app:boxStrokeColor="@color/stroke_color_outlined"
                    app:hintTextColor="@color/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_school"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOnPrimary"
                        android:textCursorDrawable="@color/colorOnPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/class_teacher"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/class_school"
                    app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                    app:boxStrokeColor="@color/stroke_color_outlined"
                    app:hintTextColor="@color/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_class"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/colorOnPrimary"
                        android:textCursorDrawable="@color/colorOnPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/module_teacher"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/module"
                    app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                    app:boxStrokeColor="@color/stroke_color_outlined"
                    app:hintTextColor="@color/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_module"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOnPrimary"
                        android:textCursorDrawable="@color/colorOnPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/id_teacher"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/teacher_id"
                    app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                    app:boxStrokeColor="@color/stroke_color_outlined"
                    app:hintTextColor="@color/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_id"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorOnPrimary"
                        android:textCursorDrawable="@color/colorOnPrimary" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_teacher"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/password"
                    app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                    app:boxStrokeColor="@color/stroke_color_outlined"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/helper_text"
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/colorOnPrimary"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword|number"
                        android:maxLength="6"
                        android:textColor="@color/colorOnPrimary"
                        android:textCursorDrawable="@color/colorOnPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/upload_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_bg"
                    android:elevation="60dp"
                    android:focusable="auto"
                    android:focusableInTouchMode="true"
                    android:text="@string/upload_resource"
                    android:textColor="#FFFFFF" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
